[package]
name = "bili-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.27.0", features = ["all-widgets"] }
crossterm = "0.27.0"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tui-input = "0.8.0"
url = "2.5.7"
textwrap = "0.16.2"
